Move local secrets to environment variables